Prevent tags wrapping badly
Fixes #48

--- a/Gui-v2/src/app/home/plugin-item/plugin-item.component.scss
+++ b/Gui-v2/src/app/home/plugin-item/plugin-item.component.scss
@@ -88,6 +88,7 @@
   font-size: 8pt;
   text-transform: lowercase;
   flex-wrap: nowrap;
+  white-space: nowrap;
 }
 
 .padding {
